<resources>
    <string name="app_name">Stiv Cinematheque</string>
    <string name="watched_movie">Watched</string>
    <string name="name">Name</string>
    <string name="genre">Genre</string>
    <string name="director">Director</string>
    <string name="actors">Actors</string>
    <string name="description">Description</string>
    <string name="movie_list_fragment_title">Movies</string>
    <string name="rss_parsed_ticker">Stiv Cinematheque movies updated</string>
    <string name="rss_parsed_content_title">Stiv movies are updated</string>
    <string name="rss_parsed_content_text">Please check your movies</string>
    <string name="unable_to_load_data_on_init">Please connect to network in order to transmit data</string>
    <string name="drawer_open">Navigation Menu Opened</string>
    <string name="drawer_close">Navigation Menu Closed</string>
    <string name="personal_preferences">Personal preferences</string>
    <string name="summary_background_music_preference">Do you want background music?</string>
    <string name="background_music">Background music</string>
    <string name="background_music_key">background_music_key</string>
    <string name="summary_only_on_wifi_preference">Do you want updates only on WIFI connection?</string>
    <string name="only_on_wifi">Movie updates</string>
    <string name="only_on_wifi_key">only_on_wifi_key</string>
    <string name="about_purpose_key">Purpose</string>
    <string name="about_author_key">Author</string>
    <string name="about_music_credits_key">Music credits</string>
    <string name="about_purpose">Project used on course for attendants. It covers concepts presented during training sessions</string>
    <string name="about_author">Daniel Bele</string>
    <string name="about_music_credits">Mihael Bele</string>
    <string name="search">Search</string>
    <string name="watched">Watched</string>
    <string name="notwatched">Not watched</string>
    <string name="all">All</string>
    <string name="context_menu_delete">Do you want to delete this movie?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="personal_details">Personal details</string>
    <string name="insert_date">Please insert date</string>
    <string name="insert_impressions">Please insert impressions</string>
    <string name="set_rank">Please set rank</string>
    <string name="set_rank_title">Rotate and touch</string>
    <string name="done">Done</string>
    <string name="choose_cinema">Please choose cinema</string>
    <string name="cannot_take_photos">Unfortunately, your device cannot take photos</string>
    <string name="cannot_use_accelerometer">Unfortunately, your device cannot use accelerometer</string>
    <string name="no_googleplayservices">Unfortunately, no google play services</string>
    <string name="drawer_movies">Movies</string>
    <string name="drawer_cinemas">Cinemas</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_about">About</string>
    <string name="rank_bad">Bad</string>
    <string name="rank_notbad">Not bad</string>
    <string name="rank_good">Good</string>
    <string name="rank_verygood">Very good</string>
    <string name="rank_excellent">Excellent</string>
    <string name="date_picker">Date picker</string>
</resources>
