<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        android:padding="5dp"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">
        <TextView
            style="@style/Titles"
            android:layout_width="@dimen/about_left_column"
            android:layout_height="wrap_content"
            android:text="@string/about_purpose_key"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_purpose"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp">
        <TextView
            style="@style/Titles"
            android:layout_width="@dimen/about_left_column"
            android:layout_height="wrap_content"
            android:text="@string/about_author_key"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_author"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp">
        <TextView
            style="@style/Titles"
            android:layout_width="@dimen/about_left_column"
            android:layout_height="wrap_content"
            android:text="@string/about_music_credits_key"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_music_credits"/>
    </LinearLayout>


</LinearLayout>