<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.dbele.stiv.cinematheque.MovieFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:padding="5dp"
            android:layout_width="@dimen/movie_jpg_width"
            android:layout_height="@dimen/movie_jpg_height"
            android:adjustViewBounds="true"
            android:id="@+id/ivMoviePic"
            android:src="@mipmap/ic_launcher"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:padding="5dp"
            android:layout_height="@dimen/movie_jpg_height"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="@dimen/movie_left_column"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    style="@style/MovieTitles"/>
                <TextView
                    android:paddingLeft="5dp"
                    android:id="@+id/tvMovieName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="@dimen/movie_left_column"
                    android:layout_height="wrap_content"
                    android:text="@string/genre"
                    style="@style/MovieTitles"/>
                <TextView
                    android:paddingLeft="5dp"
                    android:id="@+id/tvMovieGenre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="@dimen/movie_left_column"
                    android:layout_height="wrap_content"
                    android:text="@string/director"
                    style="@style/MovieTitles"/>
                <TextView
                    android:paddingLeft="5dp"
                    android:id="@+id/tvMovieDirector"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="@dimen/movie_left_column"
                    android:layout_height="wrap_content"
                    android:text="@string/actors"
                    style="@style/MovieTitles"/>
                <TextView
                    android:paddingLeft="5dp"
                    android:id="@+id/tvMovieActors"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="Description"
                style="@style/MovieTitles"/>
            <TextView
                android:padding="5dp"
                android:id="@+id/tvMovieDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
